Bug 247447 - [css-flexbox] wpt/css/css-flexbox/flex-aspect-ratio-img-row-010.html failing
Summary: [css-flexbox] wpt/css/css-flexbox/flex-aspect-ratio-img-row-010.html failing
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: CSS (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Sammy Gill
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2022-11-03 11:25 PDT by Sammy Gill
Modified: 2022-12-07 07:29 PST (History)
1 user (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Sammy Gill 2022-11-03 11:25:09 PDT
Flex base size of image item with aspect ratio + intrinsic width + no intrinsic height honors transferred max-height
Comment 1 Radar WebKit Bug Importer 2022-11-03 11:25:35 PDT
<rdar://problem/101922427>
Comment 2 Sammy Gill 2022-11-04 17:09:03 PDT
Pull request: https://github.com/WebKit/WebKit/pull/6155
Comment 3 EWS 2022-12-07 07:28:45 PST
Committed 257474@main (7e525946fafc): <https://commits.webkit.org/257474@main>

Reviewed commits have been landed. Closing PR #6155 and removing active labels.